k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: musical-volunteer
  labels:
    app: musical-volunteer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: musical-volunteer
  template:
    metadata:
      labels:
        app: musical-volunteer
    spec:
      containers:
      - name: musical-volunteer
        image: 716147851058.dkr.ecr.us-east-1.amazonaws.com/musical-volunteer:latest
        ports:
        - containerPort: 5000
