k8s/python-app-dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-app
  namespace: dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: python-app
  template:
    metadata:
      labels:
        app: python-app
    spec:
      containers:
      - name: python-app
        image: 716147851058.dkr.ecr.us-east-1.amazonaws.com/musical-volunteer:latest
        ports:
        - containerPort: 5000
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "200m"
        readinessProbe:
          httpGet:
            path: /health
            port: 5000
        livenessProbe:
          httpGet:
            path: /health
            port: 5000
