k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: musical-volunteer
spec:
  type: LoadBalancer
  selector:
    app: musical-volunteer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
